--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,26 @@
-# Node.js
+# frontend/.gitignore
+# Dependencies
 node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Production
+build/
+
+# Environment variables
 .env
-npm-debug.log
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-# OS
+# Misc
 .DS_Store
-Thumbs.db
+*.pem
+.vscode/
+.idea/
 
 # Logs
-logs
+logs/
 *.log
