--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,13 +1,27 @@
+# backend/Dockerfile
 FROM node:18-alpine
 
-WORKDIR /app
+# Create app directory
+WORKDIR /usr/src/app
 
+# Install app dependencies
 COPY package*.json ./
-
 RUN npm ci --only=production
 
+# Copy app source
 COPY . .
 
+# Create non-root user
+RUN addgroup -g 1001 -S nodejs
+RUN adduser -S nodejs -u 1001
+USER nodejs
+
+# Expose port
 EXPOSE 5000
 
-CMD ["npm", "start"]
+# Health check
+HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
+  CMD node -e "require('http').get('http://localhost:5000/health', (r) => {if(r.statusCode !== 200) throw new Error()})"
+
+# Start command
+CMD ["node", "server.js"]
