--- a/backend/package.json
+++ b/backend/package.json
@@ -1,12 +1,18 @@
 {
-  "name": "ecommerce-backend",
+  "name": "nexusshop-backend",
   "version": "1.0.0",
-  "description": "Node.js backend for e-commerce platform",
+  "description": "E-commerce backend API",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "jest",
+    "lint": "eslint .",
+    "build": "echo 'Build completed'"
   },
+  "keywords": ["ecommerce", "api", "mongodb", "express"],
+  "author": "Your Name",
+  "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
     "mongoose": "^7.3.0",
@@ -16,9 +22,16 @@
     "jsonwebtoken": "^9.0.0",
     "stripe": "^12.5.0",
     "express-validator": "^7.0.1",
-    "multer": "^1.4.5-lts.1"
+    "helmet": "^7.0.0",
+    "express-rate-limit": "^6.10.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "jest": "^29.5.0",
+    "supertest": "^6.3.3"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
   }
 }
