--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,32 +1,37 @@
 {
-  "name": "ecommerce-frontend",
-  "version": "0.1.0",
+  "name": "nexusshop-frontend",
+  "version": "1.0.0",
   "private": true,
+  "description": "NexusShop - Premium E-commerce Frontend",
+  "author": "Your Name",
+  "license": "ISC",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
-    "express": "^5.2.1",
-    "helmet": "^8.1.0",
-    "http-proxy-middleware": "^3.0.5",
-    "mongoose": "^9.1.4",
-    "morgan": "^1.10.1",
+    "chart.js": "^4.5.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.71.1",
+    "react-hook-form": "^7.43.9",
     "react-icons": "^5.5.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
-    "react-toastify": "^9.0.3"
-  },
+  "react-toastify": "^9.0.3"
+},
   "scripts": {
     "start": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
-    "build": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
+    "build": "node scripts/build-windows.js",
+    "build:simple": "set NODE_OPTIONS=--openssl-legacy-provider && set CI=false && react-scripts build",
+    "build:prod": "node scripts/build-windows.js --production",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "devDependencies": {
+    "eject": "react-scripts eject",
+    "prebuild": "echo 'Use npm run build instead'",
+    "generate-env": "node scripts/generate-env.js",
+    "generate-sitemap": "node scripts/generate-sitemap.js",
+    "netlify-build": "npm run generate-env && npm run generate-sitemap && set NODE_OPTIONS=--openssl-legacy-provider && react-scripts build"
+}
+,
+"devDependencies": {
     "nodemon": "^3.1.11",
     "react-scripts": "5.0.1"
   },
@@ -42,9 +47,8 @@
       "last 1 safari version"
     ]
   },
-  "description": "",
-  "main": "index.js",
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
+  }
 }
