--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,15 +1,29 @@
 {
   "short_name": "NexusShop",
-  "name": "NexusShop E-Commerce Platform",
+  "name": "NexusShop - Premium E-commerce",
+  "description": "Full-stack e-commerce platform with blue-purple gradient design",
   "icons": [
     {
       "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
+    },
+    {
+      "src": "logo192.png",
+      "type": "image/png",
+      "sizes": "192x192"
+    },
+    {
+      "src": "logo512.png",
+      "type": "image/png",
+      "sizes": "512x512"
     }
   ],
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#3a86ff",
-  "background_color": "#ffffff"
+  "background_color": "#0d1b2a",
+  "orientation": "portrait-primary",
+  "scope": "/",
+  "categories": ["shopping", "ecommerce"]
 }
