--- a/frontend/netlify.toml
+++ b/frontend/netlify.toml
@@ -1,24 +1,17 @@
 [build]
-  command = "npm run build"
-  publish = "build"
+  command = "cd frontend && npm install && npm run build"
+  publish = "frontend/build"
   functions = "functions"
 
 [build.environment]
   NODE_VERSION = "18"
   NPM_VERSION = "9"
-  CI = "false"
 
 # Environment variables for production
 [context.production.environment]
-  REACT_APP_API_URL = "https://your-backend.onrender.com"
+  REACT_APP_API_URL = "https://nexusshop-bhxb.onrender.com"
   REACT_APP_ENV = "production"
   REACT_APP_SITE_URL = "https://your-site.netlify.app"
-
-# Environment variables for branch deploys
-[context.deploy-preview.environment]
-  REACT_APP_API_URL = "https://your-backend.onrender.com"
-  REACT_APP_ENV = "staging"
-  REACT_APP_SITE_URL = "$DEPLOY_PRIME_URL"
 
 # Redirects for SPA
 [[redirects]]
@@ -36,7 +29,7 @@
     Referrer-Policy = "strict-origin-when-cross-origin"
     Permissions-Policy = "camera=(), microphone=(), geolocation=()"
 
-# Caching for static assets
+# Caching
 [[headers]]
   for = "/static/*"
   [headers.values]
@@ -51,8 +44,3 @@
   for = "/*.css"
   [headers.values]
     Cache-Control = "public, max-age=31536000"
-
-[[headers]]
-  for = "/*.html"
-  [headers.values]
-    Cache-Control = "public, max-age=0, must-revalidate"
