--- a/netlify.toml
+++ b/netlify.toml
@@ -1,11 +1,12 @@
 [build]
   base = "frontend"
-  publish = "build"
   command = "npm install && npm run build"
+  publish = "build"
 
 [build.environment]
   NODE_VERSION = "18"
   NPM_VERSION = "9"
+  NODE_OPTIONS = "--openssl-legacy-provider"
 
 # Environment variables for production
 [context.production.environment]
@@ -13,42 +14,8 @@
   REACT_APP_ENV = "production"
   REACT_APP_SITE_URL = "https://your-site.netlify.app"
 
-# Environment variables for all contexts
-[environment]
-  NODE_OPTIONS = "--openssl-legacy-provider"
-
-# Redirects for SPA (Single Page Application)
+# Redirects for SPA
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
-
-# Security headers
-[[headers]]
-  for = "/*"
-  [headers.values]
-    X-Frame-Options = "DENY"
-    X-XSS-Protection = "1; mode=block"
-    X-Content-Type-Options = "nosniff"
-    Referrer-Policy = "strict-origin-when-cross-origin"
-
-# Caching headers for better performance
-[[headers]]
-  for = "/static/*"
-  [headers.values]
-    Cache-Control = "public, max-age=31536000, immutable"
-
-[[headers]]
-  for = "/*.js"
-  [headers.values]
-    Cache-Control = "public, max-age=31536000"
-
-[[headers]]
-  for = "/*.css"
-  [headers.values]
-    Cache-Control = "public, max-age=31536000"
-
-[[headers]]
-  for = "/sw.js"
-  [headers.values]
-    Cache-Control = "no-cache"
