--- a/netlify.toml
+++ b/netlify.toml
@@ -1,21 +1,12 @@
-[build]
-  base = "frontend"
-  command = "npm install && npm run build"
-  publish = "build"
-
-[build.environment]
-  NODE_VERSION = "18"
-  NPM_VERSION = "9"
-  NODE_OPTIONS = "--openssl-legacy-provider"
-
-# Environment variables for production
-[context.production.environment]
-  REACT_APP_API_URL = "https://your-backend.onrender.com"
-  REACT_APP_ENV = "production"
-  REACT_APP_SITE_URL = "https://your-site.netlify.app"
-
-# Redirects for SPA
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
+[build] 
+  command = "cd frontend && npm install && npm run build" 
+  publish = "frontend/build" 
+ 
+[build.environment] 
+  NODE_VERSION = "18" 
+  NODE_OPTIONS = "--openssl-legacy-provider" 
+ 
+[[redirects]] 
+  from = "/*" 
+  to = "/index.html" 
+  status = 200 
