--- a/netlify.toml
+++ b/netlify.toml
@@ -1,12 +1,31 @@
-[build] 
-  command = "cd frontend && npm install && npm run build" 
-  publish = "frontend/build" 
- 
-[build.environment] 
-  NODE_VERSION = "18" 
-  NODE_OPTIONS = "--openssl-legacy-provider" 
- 
-[[redirects]] 
-  from = "/*" 
-  to = "/index.html" 
-  status = 200 
+[build]
+  command = "cd frontend && npm install && npm run build"
+  publish = "frontend/build"
+
+[build.environment]
+  NODE_VERSION = "18"
+  NPM_VERSION = "9"
+  NODE_OPTIONS = "--openssl-legacy-provider"
+
+[context.production.environment]
+  REACT_APP_API_URL = "https://your-backend.onrender.com"
+  REACT_APP_ENV = "production"
+  REACT_APP_SITE_URL = "https://your-site.netlify.app"
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+
+[[headers]]
+  for = "/*"
+  [headers.values]
+    X-Frame-Options = "DENY"
+    X-XSS-Protection = "1; mode=block"
+    X-Content-Type-Options = "nosniff"
+    Referrer-Policy = "strict-origin-when-cross-origin"
+
+[[headers]]
+  for = "/static/*"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
